# LatterDNS

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
src/latterdns/: __init__.py
