[project]
name = "latterdns"
version = "0.1.0"
description = "A lightweight DNS proxy designed to bypass DNS spoofing by exploiting timing differences between fake and legitimate packets"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Amir Hosseini Nasab", email = "awmirhn@gmail.com" }
]
license = { text = "MIT" }
keywords = ["dns", "proxy", "censorship", "gfw", "anti-censorship"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Networking",
]
dependencies = [
    "click>=8.3.1",
    "dnspython>=2.8.0",
]

[project.scripts]
latterdns = "latterdns:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/itsamirhn/latterdns"
Repository = "https://github.com/itsamirhn/latterdns"
Issues = "https://github.com/itsamirhn/latterdns/issues"

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]
